--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Panel Principal</title>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <title>Panel Principal — Centro Educativo Integral Camino a Casa</title>
   <style>
     body {
       margin: 0;
@@ -17,117 +17,41 @@
       text-align: center;
       color: #01579b;
     }
-
-    h1 {
-      font-size: 2.5rem;
-      margin-bottom: 40px;
-      text-shadow: 1px 1px 2px #81d4fa;
-    }
-
+    h1 { font-size: 2.0rem; margin-bottom: 18px; color:#013a63; }
     .card {
       background: white;
-      padding: 40px 60px;
-      border-radius: 20px;
-      box-shadow: 0 6px 12px rgba(0, 0, 0, 0.15);
-      animation: fadeIn 1s ease;
+      padding: 32px 36px;
+      border-radius: 16px;
+      box-shadow: 0 6px 12px rgba(0,0,0,0.12);
+      animation: fadeIn 0.7s ease;
+      width: 360px;
     }
-
-    .buttons {
-      display: flex;
-      flex-direction: column;
-      gap: 20px;
-      margin-top: 30px;
-    }
-
+    .buttons { display:flex; flex-direction:column; gap:14px; margin-top:18px; }
     button {
-      background-color: #0288d1;
-      color: white;
-      border: none;
-      padding: 14px 22px;
-      border-radius: 10px;
-      font-size: 1rem;
-      cursor: pointer;
-      transition: all 0.3s ease;
+      background-color:#0288d1;
+      color:white;
+      border:none;
+      padding:12px 14px;
+      border-radius:10px;
+      cursor:pointer;
+      font-weight:600;
     }
-
-    button:hover {
-      background-color: #0277bd;
-      transform: translateY(-2px);
-      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-    }
-
-    .footer {
-      position: absolute;
-      bottom: 15px;
-      font-size: 0.85rem;
-      color: #0277bd;
-    }
-
-    @keyframes fadeIn {
-      from {
-        opacity: 0;
-        transform: translateY(20px);
-      }
-      to {
-        opacity: 1;
-        transform: translateY(0);
-      }
-    }
-
-    /* Modal */
-    .modal {
-      display: none;
-      position: fixed;
-      z-index: 1000;
-      left: 0;
-      top: 0;
-      width: 100%;
-      height: 100%;
-      background-color: rgba(0,0,0,0.4);
-      justify-content: center;
-      align-items: center;
-    }
-
-    .modal-content {
-      background-color: white;
-      padding: 30px;
-      border-radius: 15px;
-      text-align: center;
-      box-shadow: 0 4px 10px rgba(0,0,0,0.2);
-    }
-
-    input[type="password"] {
-      padding: 10px;
-      border-radius: 8px;
-      border: 1px solid #ccc;
-      width: 80%;
-      margin-top: 10px;
-      text-align: center;
-    }
-
-    .close-btn {
-      background: none;
-      color: #0288d1;
-      font-weight: bold;
-      border: none;
-      margin-top: 15px;
-      cursor: pointer;
-    }
-
-    .close-btn:hover {
-      text-decoration: underline;
-    }
-
+    button.secondary { background:#2B82C6; }
+    .footer { position: absolute; bottom: 12px; font-size:0.85rem; color:#0277bd; }
+    @keyframes fadeIn { from {opacity:0; transform:translateY(12px)} to {opacity:1; transform:none} }
+    .modal { display:none; position:fixed; inset:0; background: rgba(0,0,0,0.4); align-items:center; justify-content:center; }
+    .modal-content { background:white; padding:20px; border-radius:10px; width:320px; text-align:center; box-shadow:0 6px 12px rgba(0,0,0,0.15); }
+    input[type=password] { padding:10px; border-radius:8px; width:90%; margin-top:8px; border:1px solid #ccc; text-align:center; }
   </style>
 </head>
 <body>
   <div class="card">
-    <h1>Panel Principal</h1>
-    <p>Bienvenido al sistema de gestión escolar</p>
+    <h1>Centro Educativo Integral<br><small style="font-size:0.85rem; font-weight:700">Camino a Casa</small></h1>
+    <p style="margin:6px 0 0 0; color:#046">Bienvenido al sistema de gestión escolar</p>
 
     <div class="buttons">
-      <button onclick="window.location.href='calificaciones.html'">📘 Ir a Calificaciones</button>
-      <button onclick="abrirModal()">🔒 Control de Trimestres</button>
+      <button id="btnCalificaciones">📘 Ir a Calificaciones</button>
+      <button id="btnControl" class="secondary">🔒 Control de Trimestres</button>
     </div>
   </div>
 
@@ -136,45 +60,83 @@
       <h3>Acceso Restringido</h3>
       <p>Ingrese la contraseña de administrador:</p>
       <input type="password" id="adminPassword" placeholder="Contraseña" />
-      <div style="margin-top: 20px;">
-        <button onclick="verificarPassword()">Ingresar</button>
-        <button class="close-btn" onclick="cerrarModal()">Cancelar</button>
+      <div style="margin-top:12px;">
+        <button id="ingresarBtn" style="background:#2B82C6; padding:8px 12px; color:#fff; border-radius:8px; border:none">Ingresar</button>
+        <button id="cancelBtn" style="background:none; color:#2B82C6; border:none; margin-left:8px">Cancelar</button>
       </div>
     </div>
   </div>
 
-  <div class="footer">
-    © 2025 Sistema Escolar | Acceso institucional
-  </div>
+  <div class="footer">© 2025 Centro Educativo Integral Camino a Casa</div>
 
-  <script>
-    function abrirModal() {
-      document.getElementById("passwordModal").style.display = "flex";
+  <!-- Firebase (SDK 10.8.0) -->
+  <script type="module">
+    import { initializeApp } from "https://www.gstatic.com/firebasejs/10.8.0/firebase-app.js";
+    import { getDatabase, ref, get } from "https://www.gstatic.com/firebasejs/10.8.0/firebase-database.js";
+
+    // Tu configuración (ya proporcionada)
+    const firebaseConfig = {
+      apiKey: "AIzaSyDqty2eG_5VEi5NtU_HQzfZU_6FruMh66Q",
+      authDomain: "camino-a-casa-87d65.firebaseapp.com",
+      databaseURL: "https://camino-a-casa-87d65-default-rtdb.firebaseio.com",
+      projectId: "camino-a-casa-87d65",
+      storageBucket: "camino-a-casa-87d65.firebasestorage.app",
+      messagingSenderId: "725645453280",
+      appId: "1:725645453280:web:4cc41935020d1ae290ed85"
+    };
+
+    const app = initializeApp(firebaseConfig);
+    const db = getDatabase(app);
+
+    const btnCalificaciones = document.getElementById("btnCalificaciones");
+    const btnControl = document.getElementById("btnControl");
+    const modal = document.getElementById("passwordModal");
+    const ingresarBtn = document.getElementById("ingresarBtn");
+    const cancelBtn = document.getElementById("cancelBtn");
+
+    // Función para checar si hay trimestre activo
+    async function hayTrimestreActivo() {
+      try {
+        const snap = await get(ref(db, "configuracion/trimestreActivo"));
+        if (!snap.exists()) return false;
+        const t = snap.val();
+        if (!t || !t.inicio || !t.fin) return false;
+        const hoy = new Date();
+        const inicio = new Date(t.inicio);
+        const fin = new Date(t.fin + "T23:59:59");
+        return hoy >= inicio && hoy <= fin;
+      } catch (e) {
+        console.error(e);
+        return false;
+      }
     }
 
-    function cerrarModal() {
-      document.getElementById("passwordModal").style.display = "none";
-      document.getElementById("adminPassword").value = "";
-    }
+    btnCalificaciones.addEventListener("click", async () => {
+      const activo = await hayTrimestreActivo();
+      if (activo) {
+        window.location.href = "calificaciones.html";
+      } else {
+        alert("🚫 El registro de calificaciones está cerrado. Contacte al administrador.");
+      }
+    });
 
-    function verificarPassword() {
-      const password = document.getElementById("adminPassword").value.trim();
-      const claveCorrecta = "admin123"; // 🔐 Puedes cambiar esta clave
+    btnControl.addEventListener("click", () => { modal.style.display = "flex"; document.getElementById("adminPassword").focus(); });
 
-      if (password === claveCorrecta) {
+    ingresarBtn.addEventListener("click", () => {
+      const pwd = document.getElementById("adminPassword").value.trim();
+      const claveCorrecta = "admin123";
+      if (pwd === claveCorrecta) {
+        modal.style.display = "none";
+        document.getElementById("adminPassword").value = "";
         window.location.href = "control_trimestres.html";
       } else {
         alert("Contraseña incorrecta. Acceso denegado.");
       }
-    }
+    });
 
-    // Cerrar modal si se hace clic fuera
-    window.onclick = function(event) {
-      const modal = document.getElementById("passwordModal");
-      if (event.target === modal) {
-        cerrarModal();
-      }
-    };
+    cancelBtn.addEventListener("click", () => { modal.style.display = "none"; document.getElementById("adminPassword").value = ""; });
+
+    window.addEventListener("click", (e) => { if (e.target === modal) { modal.style.display = "none"; document.getElementById("adminPassword").value = ""; } });
   </script>
 </body>
 </html>
